Modificacion del index.html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <label>Aplicacion Http Server en Heroku AREM 2018-1</label>
+        <label>Aplicacion Http Server en Heroku</label>
+        <label> AREM 2018-1 </label>
+        <img src="./logoEscuela.jpg"/>
     </body>
 </html>
