Modificacion 2 del index.html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <label>Aplicacion Http Server en Heroku</label>
+        <title>Aplicacion Http Server en Heroku</title>
         <label> AREM 2018-1 </label>
         <img src="./logoEscuela.jpg"/>
     </body>
