Modificacion del index.html letra negrita

--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <title>Aplicacion Http Server en Heroku</title>
-        <label> AREM 2018-1 </label>
-        <img src="./logoEscuela.jpg"/>
+        <br>
+            <b>Aplicacion Http Server en Heroku</b>
+            <b> AREM 2018-1 </b>
+        </br>
+        <img src="./logoEscuela.jpg" align="center"/>
     </body>
 </html>
