Modificacion del index.html

--- a/index.html
+++ b/index.html
@@ -6,10 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <br>
-            <b>Aplicacion Http Server en Heroku</b>
-            <b> AREM 2018-1 </b>
-        </br>
-        <img src="./logoEscuela.jpg" align="center"/>
+        <label>Aplicacion Http Server en Heroku -- AREM 2018-1</label>
+        <img src="./logoEscuela.jpg"/>
     </body>
 </html>
